--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build --prod",
     "postintall": "ng build --aot -prod",
     "start": "node server.js",
+    "deploy": "git push origin master && git push heroku master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
