--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "p5": "^0.6.0",
     "rxjs": "^5.5.6",
     "scrollmagic": "^2.0.5",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.19",
     "@angular/cli": "1.6.7",
     "@angular/compiler": "^5.2.0",
     "@angular/compiler-cli": "^5.2.0",
@@ -54,5 +52,6 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  }
+  },
+  "devDependencies": {}
 }
